[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/Start/MenuRoot.gd" type="Script" id=1]
[ext_resource path="res://fonts/Menu_Fonts/Title_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Start/Logos/Basketball_logo.png" type="Texture" id=3]
[ext_resource path="res://fonts/Menu_Fonts/Option_font.tres" type="DynamicFont" id=4]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.615686, 0.901961, 0.921569, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1920.0
color = Color( 0.933333, 0.447059, 0.0941176, 1 )

[node name="MenuRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu1" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/Menu1"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/Menu1/CenterContainer"]
margin_left = 135.0
margin_top = 165.0
margin_right = 1785.0
margin_bottom = 914.0

[node name="Label" type="Label" parent="MenuRoot/Menu1/CenterContainer/VBoxContainer"]
margin_right = 1650.0
margin_bottom = 290.0
size_flags_horizontal = 2
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0.72, 0.72, 1 )
custom_colors/font_color_shadow = Color( 0.396078, 0.576471, 0.588235, 1 )
custom_constants/shadow_offset_x = 9
custom_constants/shadow_offset_y = 9
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"

[node name="Games" type="ToolButton" parent="MenuRoot/Menu1/CenterContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 1650.0
margin_bottom = 443.0
custom_colors/font_color = Color( 0.921569, 0.615686, 0.615686, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Games"

[node name="Start" type="ToolButton" parent="MenuRoot/Menu1/CenterContainer/VBoxContainer"]
margin_top = 447.0
margin_right = 1650.0
margin_bottom = 596.0
custom_colors/font_color = Color( 0.184314, 0.792157, 0.101961, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.376471, 0.0980392, 1 )
custom_colors/font_color_pressed = Color( 0.0770001, 0.66, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Start"

[node name="Options" type="ToolButton" parent="MenuRoot/Menu1/CenterContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 1650.0
margin_bottom = 749.0
custom_colors/font_color = Color( 0.921569, 0.615686, 0.615686, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Options"

[node name="Menu2" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1920.0

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/Menu2"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/Menu2/CenterContainer"]
margin_left = 255.0
margin_top = 52.0
margin_right = 1665.0
margin_bottom = 1027.0
alignment = 1

[node name="Label" type="Label" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer"]
margin_right = 1410.0
margin_bottom = 141.0
custom_fonts/font = ExtResource( 4 )
text = "Games"
align = 1
uppercase = true

[node name="GridContainer" type="GridContainer" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 1410.0
margin_bottom = 975.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5

[node name="TextureButton" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 290.0
margin_right = 540.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton3" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 580.0
margin_right = 830.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton4" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 870.0
margin_right = 1120.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton5" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 1160.0
margin_right = 1410.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton6" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 290.0
margin_right = 250.0
margin_bottom = 540.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton7" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 290.0
margin_top = 290.0
margin_right = 540.0
margin_bottom = 540.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton8" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 580.0
margin_top = 290.0
margin_right = 830.0
margin_bottom = 540.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton9" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 870.0
margin_top = 290.0
margin_right = 1120.0
margin_bottom = 540.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton10" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 1160.0
margin_top = 290.0
margin_right = 1410.0
margin_bottom = 540.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton11" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 580.0
margin_right = 250.0
margin_bottom = 830.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton12" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 290.0
margin_top = 580.0
margin_right = 540.0
margin_bottom = 830.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton13" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 580.0
margin_top = 580.0
margin_right = 830.0
margin_bottom = 830.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton14" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 870.0
margin_top = 580.0
margin_right = 1120.0
margin_bottom = 830.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton15" type="TextureButton" parent="MenuRoot/Menu2/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 1160.0
margin_top = 580.0
margin_right = 1410.0
margin_bottom = 830.0
rect_min_size = Vector2( 250, 250 )
texture_normal = ExtResource( 3 )
expand = true

[connection signal="pressed" from="MenuRoot/Menu1/CenterContainer/VBoxContainer/Games" to="MenuRoot" method="_on_Games_pressed"]
